tests/fail/fail2.sps
(import (yuni scheme))

(exit #f)
